Search Command and general command execution

--- a/meson.build
+++ b/meson.build
@@ -1,10 +1,10 @@
 project('unified-package-manager', 'cpp')
 
 src_files = [
-	'Command.cpp',
-	'PackageManager.cpp',
-	'config_reader.cpp',
-	'main.cpp',
+	'src/Command.cpp',
+	'src/PackageManager.cpp',
+	'src/config_reader.cpp',
+	'src/main.cpp',
 ]
 
 tomlplusplus_dep = dependency('tomlplusplus')
@@ -12,6 +12,6 @@ tomlplusplus_dep = dependency('tomlplusplus')
 executable(
 	'upm',
 	src_files,
-	cpp_args: ['-std=c++2b', '-DVERSION="0.1"'],
+	cpp_args: ['-std=c++20', '-DVERSION="0.1"'],
 	dependencies: [tomlplusplus_dep],
 )
