--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,10 @@
 project('unified-package-manager', 'cpp')
 
+MAJOR_VER = '0'
+MINOR_VER = '1'
+PATCH_VER = '1'
+SEM_VER = '"' + MAJOR_VER + '.' + MINOR_VER + '.' + PATCH_VER + '"'
+
 src_files = [
 	'src/Command.cpp',
 	'src/PackageManager.cpp',
@@ -7,11 +12,23 @@ src_files = [
 	'src/main.cpp',
 ]
 
-tomlplusplus_dep = dependency('tomlplusplus')
+tomlplusplus_dep = dependency(
+	'tomlplusplus', 
+	default_options: [
+		'build_lib=false'
+	]
+)
 
 executable(
 	'upm',
 	src_files,
-	cpp_args: ['-std=c++20', '-DVERSION="0.1"'],
+	cpp_args: ['-std=c++20', '-DVERSION=' + SEM_VER],
 	dependencies: [tomlplusplus_dep],
+	install: true,
+	install_dir: '/usr/local/bin/',
+)
+
+install_subdir(
+	'configs',
+	install_dir: '/usr/local/etc/upm/',
 )
